<resources>
    <string name="app_name">Cat+</string>

    <string name="cat">Cat</string>
    <string name="info">Information</string>
    <string name="fav">My Favorite</string>
    <string name="hospitals">Hospitals</string>
    <string name="fb">Facebook</string>
    <string name="calendar">Calendar</string>
    <string name="adop">Adopter</string>

    <string name="name">Adopter:</string>

    <string name="id">Id Number:</string>
    <string name="address">Address:</string>
    <string name="contact">Contact Number:</string>
    <string name="otherCats">Does the adopter have other cats at home? :</string>
    <string name="family">Family Members (include all that will be living with the cat):</string>
    <string name="familyAgree">Does everyone in the house agree to adopt this cat?</string>
    <string name="expense">Predicted Expense on Cat(s): (NTD/month)</string>
    <string name="environment">Environment:</string>
    <string name="adoptionContract">Adoption Contract</string>
    <string name="city">City:</string>

    <string name="sex">Sexuality:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="others">Others:</string>
    <string name="adoptionDate">Adoption Date:</string>

    <string name="weight">Weight:</string>
    <string name="color">Color:</string>
    <string name="birth">Birth:</string>
    <string name="about">About:</string>
    <string name="ligation">Ligation</string>
    <string name="vaccine">Vaccine</string>
    <string name="vaccineName">Vaccine:</string>
    <string name="blood_test">Blood Test</string>
    <string name="deworm">Deworm</string>
    <string name="cleanEar">Ears Cleaned</string>
    <string name="cutNail">Nails Cutted</string>
    <string name="antiparasite">Antiparasite</string>
    <string name="mixed">Mixed</string>
    <string name="all">All</string>

    <string name="save_button">Save</string>
    <string name="clear_button">Clear</string>
    <string name="download_button">Download</string>
    <string name="open_camera_button">Camera</string>

<!--    black, white, orange, calico, tuxedo, tabby-->
    <string-array name="color_array">
        <item>select a color</item>
        <item>Black (黑)</item>
        <item>White (白)</item>
        <item>Orange (橘)</item>
        <item>Calico (三花)</item>
        <item>Tuxedo (賓士)</item>
        <item>Tabby (虎斑)</item>
        <item>others</item>
    </string-array>

    <string-array name="address_array">
        <item>city</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>新竹市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>台中市</item>
        <item>其他</item>
    </string-array>

    <string name="taipei">台北市</string>
    <string name="newTaipei">新北市</string>
    <string name="taoyuan">桃園市</string>
    <string name="hsinchu">新竹市</string>
    <string name="chubei">新竹縣</string>
    <string name="miaoli">苗栗縣</string>
    <string name ="taichung">台中市</string>
    <string name ="other">其他</string>

    <string name="example_cat">This cat is 3 months old.\nFemale.\nBlood test and Deworm:\n Done.</string>

    <string name="intro">To take good care of cats, there are many notable information that we should know about.</string>
    <string name="cat_disease">Cat Disease:\n Cats are like humans, they get sick and they need to be taken good care of.</string>
    <string name="adj_period">Adjustment Period:\n If an owner already has a cat and plans on adopting a kitty, then there are a few things the owner should keep in mind in order to reach harmony in the house.</string>
    <string name="cat_health">Cat Health:\n A healthy cat would save the owner a lot of trouble in its elderly ages.</string>
    <string name="daily_care">Daily Care:\n Lock your windows, doors, and drawers. Careful not to put anything sharp or flammable where the cat is able to reach. And remember, do not by products that are too expensive, cause it might not last long. </string>
    <string name="hospital">24hr Hospitals in Taiwan: </string>
</resources>