<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cat_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/morandi_Parchment">
            <RelativeLayout
                android:id="@+id/title_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/morandi_Soya_Bean">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="50dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/morandi_Parchment"
                    android:layout_gravity="center_vertical" />
                <ImageButton
                    android:id="@+id/home_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/a_home_button"/>
            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/morandi_Parchment">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/morandi_Monogoose">
                    <ImageView
                        android:id="@+id/cat1"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        android:src="@drawable/b_cat"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/morandi_Parchment">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/weight"/>
                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sex"/>
                <ToggleButton
                    android:id="@+id/sexuality_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/birth"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/birth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:layout_weight="1"/>

            </LinearLayout>
            <CheckBox
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onCheckboxClicked"
                android:text="@string/all"/>
            <CheckBox
                android:id="@+id/ligation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ligation"/>
            <CheckBox
                android:id="@+id/blood_test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/blood_test"/>
            <CheckBox
                android:id="@+id/deworm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/deworm"/>
            <CheckBox
                android:id="@+id/antiparasite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/antiparasite"/>
            <CheckBox
                android:id="@+id/cutNails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cutNail"/>
            <CheckBox
                android:id="@+id/cleanEar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cleanEar"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/vaccine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/vaccine"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/vaccineName"/>
                <EditText
                    android:id="@+id/vaccineName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/color"/>
            <EditText
                android:id="@+id/colorKind"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/mixed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mixed"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/about"/>
            <EditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/others"/>
            <EditText
                android:id="@+id/others_cat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/adoptionDate"/>
            <EditText
                android:id="@+id/adoptionDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:layout_weight="1"/>

        </LinearLayout>
    </ScrollView>