<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/adopter_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/morandi_Soft_Amber">
        <RelativeLayout
            android:id="@+id/title_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/morandi_Soya_Bean">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="50dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/morandi_Parchment"
                android:layout_gravity="center_vertical" />
            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/a_home_button"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/morandi_Soft_Amber">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sex"/>
            <ToggleButton
                android:id="@+id/sexuality_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/birth"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:layout_weight="1"/>

        </LinearLayout>
        <TextView
            android:id="@+id/adopterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <TextView
            android:id="@+id/adopterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <TextView
            android:id="@+id/adopterContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/otherCats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otherCats"
                android:textColor="@color/morandi_Armadillo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="@color/morandi_Armadillo"/>
            <TextView
                android:id="@+id/expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expense"
                android:textColor="@color/morandi_Armadillo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                android:textColor="@color/morandi_Armadillo"/>
        </LinearLayout>
        <TextView
            android:id="@+id/adopterFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <CheckBox
            android:id="@+id/familyAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/familyAgree"
            android:textColor="@color/morandi_Armadillo"/>

        <TextView
            android:id="@+id/environment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/environment"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textColor="@color/morandi_Armadillo"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/morandi_Armadillo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adoptionContract"
            android:background="@color/morandi_Soft_Amber"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:background="@color/morandi_Parchment">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/morandi_Monogoose">
                <ImageButton
                    android:id="@+id/adopter_messenger_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/a_messenger_button"/>
                <ImageButton
                    android:id="@+id/adopter_fb_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/a_fb_button"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>