<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/morandi_Parchment">
    <RelativeLayout
        android:id="@+id/title_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/morandi_Soya_Bean">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/morandi_Parchment"
            android:layout_gravity="center_vertical" />
        <ImageButton
            android:id="@+id/init_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="140dp"
            android:layout_centerVertical="true"
            android:background="@drawable/a_add_page_button"/>
        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="65dp"
            android:layout_centerVertical="true"
            android:background="@drawable/a_search_button"/>
        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/a_home_button"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:layout_weight="1"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/morandi_Monogoose"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/cat_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/b_cat_white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textColor="@color/light"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@color/morandi_Monogoose"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <ImageButton
                android:id="@+id/adopter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a_adopter_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adop"
                android:textColor="@color/light"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:paddingTop="60dp"
        android:layout_weight="1"
        android:paddingBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/morandi_Monogoose"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/info_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a_info_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hospitals"
                android:textColor="@color/light"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/morandi_Monogoose"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/calendar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a_calendar_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="@color/light"
                android:gravity="center_horizontal"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>